[FIX] view on desktop and improve on mobile

--- a/src/styles/leaderboard.css
+++ b/src/styles/leaderboard.css
@@ -1,9 +1,10 @@
 .leaderboard-container {
   margin: 0 auto;
-  max-width: 750px;
+  max-width: max-content;
 }
 
 .leaderboard-table {
+  margin: 0 auto;
   color: #fff;
   border-collapse: collapse;
   border-style: hidden;
@@ -68,17 +69,17 @@
 
 .leaderboard-table td,
 .leaderboard-table th {
-  padding: 6px;
+  padding: 14px;
   font-size: 14px;
 }
 
-.leaderboard-table td:nth-child(2) {
+/* .leaderboard-table td:nth-child(2) {
   width: max-content;
 }
 
 .leaderboard-table {
   width: max-content;
-}
+} */
 
 .leaderboard-table tr:nth-child(1) th {
   text-align: center;
@@ -102,7 +103,7 @@
 }
 
 .member + .member {
-  margin-top: 2px;
+  margin-top: 4px;
 }
 
 .wrapper-team-top {
@@ -111,13 +112,16 @@
   align-items: center;
 }
 .team-toggle {
-  margin-right: 5px;
+  margin-right: 10px;
 }
 .wrapper-competitor div.sb-avatar {
   border-radius: 50%;
   background: white;
   border: 2px solid white;
-  margin-right: 6px;
+  margin-right: 10px;
+}
+.wrapper-members {
+  cursor:pointer;
 }
 
 .wrapper-competitor {
@@ -126,6 +130,7 @@
 
 .team-name {
   font-weight: 700;
+  font-size: inherit;
 }
 
 .member {
@@ -162,8 +167,8 @@
   font-family: var(--font-family);
   background: var(--tertiary-background-purple);
   border-radius: 26px;
-  margin-top: 2px;
-  padding: 2px 6px;
+  margin-top: 6px;
+  padding: 6px 8px;
   justify-content: center;
   align-items: center;
   display: flex;
@@ -212,14 +217,15 @@ thead {
   .leaderboard-container {
     overflow: auto;
     height: 80vh;
+    max-width: 100vw;
   }
 
   .leaderboard-container * {
     font-size: 12px;
   }
 
-  
-  .leaderboard-table td {
+  .leaderboard-table td,
+  .leaderboard-table th {
     padding: 4px;
   }
 
@@ -259,14 +265,20 @@ thead {
     margin: 0;
     min-width: 20px;
   }
-
+  
   .team-identifier {
+    margin-top: 2px;
+    padding: 2px 6px;
     margin-left: 6px;
     font-size: 8px;
   }
 
   .team-avatar {
     margin-right: 4px;
+  }
+
+  .team-toggle {
+    margin-right: 5px;
   }
 
   .leaderboard-table th[role="columnheader"]:first-child {
